--- a/src/css/testimonials.css
+++ b/src/css/testimonials.css
@@ -1,11 +1,92 @@
-/* TESTIMONIALS */
 .testimonials {
   padding: 80px 0;
 }
 
-@media screen and (min-wdith: 768px) {
+.container {
+  min-width: 320px;
+  padding: 0 20px;
+}
+
+.testimonials__title {
+  display: flex;
+  align-items: start;
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 1.37;
+  letter-spacing: -0.042em;
+  margin-bottom: 40px;
+}
+
+.testimonials__list {
+  display: flex;
+  justify-content: center;
+}
+
+.testimonials__item {
+  padding: 0px 18px 18px 18px;
+  border-radius: 4px;
+  border: 1px solid rgba(252, 249, 249, 0.1);
+  max-width: 342px;
+}
+
+.testimonials__img-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: translate(0, -40%);
+  margin-bottom: -20px;
+}
+
+.testimonials__subtitle {
+  color: var(--white, #fcf9f9);
+  text-align: center;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 30px;
+  margin-bottom: 8px;
+}
+
+.testimonials__text {
+  color: rgba(252, 249, 249, 0.4);
+  text-align: center;
+  font-size: 14px;
+  max-width: 300px;
+}
+
+@media screen and (max-width: 767px) {
+  .testimonials__item:nth-child(2) {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1279px) {
+  .testimonials__item:nth-child(3) {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
   .testimonials {
     padding: 100px 0;
+  }
+
+  .container {
+    min-width: 768px;
+    padding: 0 36px;
+  }
+
+  .testimonials__title {
+    font-size: 44px;
+    line-height: 1.45;
+    letter-spacing: -0.03em;
+  }
+
+  .testimonials__list {
+    gap: 32px;
+  }
+
+  .testimonials__text {
+    font-size: 16px;
   }
 }
 
@@ -13,119 +94,29 @@
   .testimonials {
     padding: 150px 0;
   }
-}
 
-.container {
-  min-width: 320px;
-  margin: 0 auto;
-  padding: 0 20px;
-}
-
-@media screen and (min-width: 768px) {
   .container {
-    width: 768px;
-    margin: 0 auto;
-    padding: 0 32px;
-  }
-}
-
-@media screen and (min-width: 1280px) {
-  .container {
-    width: 1280px;
-    margin: 0 auto;
+    min-width: 1280px;
     padding: 0 100px;
   }
-}
-.testimonials__title {
-  color: var(--white, #fcf9f9);
-  font-size: 32px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 1.38;
-  letter-spacing: -0.0025em;
-  margin-bottom: 64px;
-}
 
-@media screen and (min-width: 768px) {
-  .testimonials__title {
-    font-size: 44px;
-    line-height: 1.38;
-    letter-spacing: -0.03em;
-  }
-}
-
-.testimonials__list {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 26px;
-}
-
-@media screen and (min-width: 768px) {
   .testimonials__list {
-    gap: 32px;
-  }
-}
-
-@media screen and (min-width: 1280px) {
-  .testimonials__list {
+    display: flex;
+    justify-content: center;
     gap: 26px;
   }
 }
 
-.testimonials__item {
-  border-radius: 4px;
-  border: 1px solid rgba(252, 249, 249, 0.1);
-  padding: 24px 18px 18px 18px;
-}
-
-@media screen and (max-width: 767px) {
-  .testimonials__item:nth-last-child(-n + 2) {
-    display: none;
+@media screen and (min-width: 1440px) {
+  .container {
+    max-width: 1440px;
   }
-}
-@media screen and (max-width: 1280px) {
-  .testimonials__item:nth-last-child(-n + 1) {
-    display: none;
+
+  .testimonials__item {
+    max-width: 396px;
   }
-}
 
-.testimonials__img-wrap {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  box-shadow: 0px 1px 4px 0px rgba(16, 24, 40, 0.06);
-  transform: translate(0%, -100%);
-  max-height: 34px;
-}
-
-.testimonials__subtitle {
-  color: var(--white, #fcf9f9);
-  text-align: center;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 1.5;
-  margin-bottom: 8px;
-}
-.testimonials__text {
-  color: rgba(252, 249, 249, 0.4);
-  text-align: center;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: normal;
-  max-width: 291px;
-}
-
-@media screen and (min-width: 768px) {
   .testimonials__text {
-    font-size: 16px;
-    max-width: 300px;
-  }
-}
-
-@media screen and (min-width: 1280px) {
-  .testimonials__text {
-    max-width: 306px;
+    max-width: 360px;
   }
 }
