--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -1,19 +1,19 @@
 <section class="testimonials">
   <div class="container testimonials__inner">
-    <div class="testimonials__content">
-      <h2 class="testimonials__title">Testimonials</h2>
-      <ul class="testimonials__list">
-        <li class="testimonials__item">
-          <div class="testimonials__img-wrap">
-            <img
-              class="testimonials__img"
-              src="../img/user1.png"
-              alt=""
-              width="64"
-              height="64"
-              loading="lazy"
-            />
-          </div>
+    <h2 class="testimonials__title">Testimonials</h2>
+    <ul class="testimonials__list">
+      <li class="testimonials__item">
+        <div class="testimonials__img-wrap">
+          <img
+            class="testimonials__img"
+            src="../img/user1.png"
+            alt=""
+            width="64"
+            height="64"
+            loading="lazy"
+          />
+        </div>
+        <div class="testimonials__text-wrap">
           <h3 class="testimonials__subtitle">Maria Tkachuk</h3>
           <p class="testimonials__text">
             I was pleasantly surprised by the variety of embroidery offered by
@@ -22,48 +22,47 @@
             occasion and received impeccable service and refinement in every
             detail.
           </p>
-        </li>
-        <li class="testimonials__item">
-          <div class="testimonials__img-wrap">
-            <img
-              class="testimonials__img"
-              src="../img/user2.png"
-              alt=""
-              width="64"
-              height="64"
-              loading="lazy"
-            />
-          </div>
-          <h3 class="testimonials__subtitle">Sergey Rybachok</h3>
-          <p class="testimonials__text">
-            Vyshyvanka Vibes exceeds all my expectations! Their vyshyvanka are
-            simply masterpieces! I fell in love with the quality of the
-            materials and the skill of the artisans behind each product. This is
-            my favorite embroidery shop where I always find something special
-            and unique.
-          </p>
-        </li>
-        <li class="testimonials__item">
-          <div class="testimonials__img-wrap">
-            <img
-              class="testimonials__img"
-              src="../img/user3.png"
-              alt=""
-              width="64"
-              height="64"
-              loading="lazy"
-            />
-          </div>
-          <h3 class="testimonials__subtitle">Natalia Chatuk</h3>
-          <p class="testimonials__text">
-            Vyshyvanka Vibes is a real find for everyone who appreciates
-            Ukrainian culture. Their embroidery reflects the spirit and
-            traditions of our people. I not only buy embroidered shirts for
-            myself, but also give them to my friends abroad as a symbol of our
-            beauty and national pride.
-          </p>
-        </li>
-      </ul>
-    </div>
+        </div>
+      </li>
+      <li class="testimonials__item">
+        <div class="testimonials__img-wrap">
+          <img
+            class="testimonials__img"
+            src="../img/user2.png"
+            alt=""
+            width="64"
+            height="64"
+            loading="lazy"
+          />
+        </div>
+        <h3 class="testimonials__subtitle">Sergey Rybachok</h3>
+        <p class="testimonials__text">
+          Vyshyvanka Vibes exceeds all my expectations! Their vyshyvanka are
+          simply masterpieces! I fell in love with the quality of the materials
+          and the skill of the artisans behind each product. This is my favorite
+          embroidery shop where I always find something special and unique.
+        </p>
+      </li>
+      <li class="testimonials__item">
+        <div class="testimonials__img-wrap">
+          <img
+            class="testimonials__img"
+            src="../img/user3.png"
+            alt=""
+            width="64"
+            height="64"
+            loading="lazy"
+          />
+        </div>
+        <h3 class="testimonials__subtitle">Natalia Chatuk</h3>
+        <p class="testimonials__text">
+          Vyshyvanka Vibes is a real find for everyone who appreciates Ukrainian
+          culture. Their embroidery reflects the spirit and traditions of our
+          people. I not only buy embroidered shirts for myself, but also give
+          them to my friends abroad as a symbol of our beauty and national
+          pride.
+        </p>
+      </li>
+    </ul>
   </div>
 </section>
