--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -5,9 +5,9 @@
       <li class="testimonials__item">
         <div class="testimonials__img-wrap">
           <img
-            class="testimonials__img"
             src="../img/user1.png"
-            alt=""
+            srcset="../img/user1.png 1x, ../img/user1@2x.png 2x"
+            alt="Customer testimonial: 'Pleasantly surprised by Vyshyvanka Vibes' variety of embroidery."
             width="64"
             height="64"
             loading="lazy"
@@ -27,9 +27,9 @@
       <li class="testimonials__item">
         <div class="testimonials__img-wrap">
           <img
-            class="testimonials__img"
             src="../img/user2.png"
-            alt=""
+            srcset="../img/user2.png 1x, ../img/user2@2x.png 2x"
+            alt="Customer testimonial: 'Pleasantly surprised by Vyshyvanka Vibes' variety of embroidery."
             width="64"
             height="64"
             loading="lazy"
@@ -46,9 +46,9 @@
       <li class="testimonials__item">
         <div class="testimonials__img-wrap">
           <img
-            class="testimonials__img"
             src="../img/user3.png"
-            alt=""
+            srcset="../img/user3.png 1x, ../img/user3@2x.png 2x"
+            alt="Customer testimonial: 'Pleasantly surprised by Vyshyvanka Vibes' variety of embroidery."
             width="64"
             height="64"
             loading="lazy"
