--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -5,7 +5,7 @@
       <li class="testimonials__item">
         <div class="testimonials__img-wrap">
           <img
-            src="./img/testimonials/user1.png"
+            src="../img/testimonials/user1.png"
             srcset="
               ./img/testimonials/user1.png    1x,
               ./img/testimonials/user1@2x.png 2x
