--- a/src/css/testimonials.css
+++ b/src/css/testimonials.css
@@ -20,34 +20,55 @@
 }
 
 .testimonials__item {
+  max-width: 340px;
   padding: 0px 18px 18px 18px;
   border-radius: 4px;
   border: 1px solid rgba(252, 249, 249, 0.1);
-  max-width: 342px;
+  transition: transform 0.5s, background-color 0.5s, color 0.5s;
+}
+
+/* .testimonials__item:hover,
+.testimonials__item:focus {
+  transform: scale(1.15);
+  background-color: var(--white, #fcf9f9);
+  color: #1c2225;
+} */
+
+.testimonials__item:hover,
+.testimonials__item:focus {
+  transform: scale(1.15);
+  background-color: var(--white, #fcf9f9);
+}
+
+.testimonials__item:hover .testimonials__subtitle,
+.testimonials__item:focus .testimonials__subtitle,
+.testimonials__item:hover .testimonials__text,
+.testimonials__item:focus .testimonials__text {
+  color: #1c2225;
 }
 
 .testimonials__img-wrap {
   display: flex;
   align-items: center;
   justify-content: center;
-  transform: translate(0, -40%);
+  transform: translateY(-40%);
   margin-bottom: -20px;
 }
 
 .testimonials__subtitle {
   color: var(--white, #fcf9f9);
-  text-align: center;
   font-size: 20px;
   font-weight: 600;
   line-height: 30px;
   margin-bottom: 8px;
+  text-align: center;
 }
 
 .testimonials__text {
   color: rgba(252, 249, 249, 0.4);
-  text-align: center;
   font-size: 14px;
   max-width: 300px;
+  text-align: center;
 }
 
 @media screen and (max-width: 767px) {
