--- a/src/css/your-order.css
+++ b/src/css/your-order.css
@@ -1,1 +1,62 @@
 /* YOUR-ORDER */
+.your-order {}
+
+.order-img {}
+
+.order-title {
+    color: #FCF9F9;
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 1.37;
+    letter-spacing: -0.03em;
+}
+
+.order-title span {
+    color: #ECD979;
+}
+
+.form-order {}
+
+.modal-field-order {}
+
+.form-label {}
+
+.form-input {
+    border-radius: 15px;
+    border: 1px solid rgba(252, 249, 249, 0.10);
+    background-color: transparent;
+    width: 100%;
+    height: 47px;
+    margin-bottom: 20px;
+    padding-right: 16px;
+    padding-left: 16px;
+    color: rgba(252, 249, 249, 0.50);
+}
+
+.form-input::placeholder {
+color: rgba(252, 249, 249, 0.50);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.02em;
+}
+
+.form-textarea {
+    border-radius: 8px;
+    border: 1px solid rgba(252, 249, 249, 0.10);
+    background-color: transparent;
+}
+
+.form-btn {
+    padding: 14px 36px;
+    color: #FCF9F9;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: -0.04em;
+    text-transform: uppercase;
+    border-radius: 15px;
+    border: 1px solid rgba(252, 249, 249, 0.10);
+}
+
+.btn-icon {}
