--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,1 +1,113 @@
 /* HERO */
+.hero-container{
+    padding: 60px 20px 80px 20px;
+}
+.hero-text-box{
+display: none;
+}
+.hero-title{
+color: var(--white, #FCF9F9);
+font-size: 44px;
+font-weight: 400;
+line-height: 1.23; 
+letter-spacing: -0.03em;
+}
+span{
+color: var(--white, #ECD979);
+}
+.hero-btn{
+color: var(--white, #FCF9F9);
+font-size: 14px;
+font-weight: 600;
+line-height: normal;
+letter-spacing: -0.56px;
+text-transform: uppercase;
+border-radius: 15px;
+border: 1px solid rgba(252, 249, 249, 0.10);
+display: inline-flex;
+height: 49px;
+padding: 14px 36px;
+justify-content: center;
+align-items: center;
+gap: 10px;
+flex-shrink: 0;
+transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+margin-top: 20px;
+margin-bottom: 40px;
+}
+.hero-btn:hover{
+border: 1px solid var(--yellow, #ECD979);
+}
+.hero-btn svg{
+flex-shrink: 0;
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+.hero-btn svg:hover{
+transform: rotate(-30deg);    
+}
+.hero-img{
+display: none;
+}
+    
+
+@media screen and (min-width: 768px){
+    .hero{
+        position: relative;
+    }
+    .hero-container{
+        padding: 53px 32px 50px 32px;
+        position: relative;
+    }
+    .hero-text-box{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        row-gap: 16px;
+        position: absolute;
+        right: 0;
+
+       
+        }
+    .hero-text{color: rgba(252, 249, 249, 0.40);
+        text-align: center;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: normal;
+        letter-spacing: -0.04em;
+        max-width: 115px;
+    }
+    
+    .hero-title{
+        font-size: 54px;
+        line-height: 1.19em;
+        max-width: 549px;
+        }
+    .hero-btn{
+        font-size: 16px;
+        padding: 14px 39px;
+    } 
+    .hero-img{
+        display: block;
+        position: absolute;
+        right: 0;
+        bottom: 42px;
+        }   
+}
+
+
+
+
+
+
+
+    @media screen and (min-width: 1280px){}
+
+    @media screen and (min-width: 1440px){
+        .hero-title{
+            font-size: 64px;
+            line-height: 1.16em;
+            }
+
+
+    }
+
