--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,9 +1,9 @@
 <section class="hero">
     <div class="container hero-container">
-      <div class=""><svg class="hero-icon" width="52" height="51">
+      <div class="hero-text-box"><svg class="hero-icon" width="52" height="51">
         <use href="../img/icons.svg#icon-Star-10"></use>
         </svg>
-        <p class="">all embroidery is made by hand</p>
+        <p class="hero-text">all embroidery is made by hand</p>
       </div>
       <h1 class="hero-title">Reviving the traditional<span> Ukrainian</span>  artistry in every stitch.</h1>
       <button type="button" class="hero-btn">Order <svg class="hero-btn-icon" width="26" height="10">
@@ -23,19 +23,20 @@
             media="(max-width: 767px)"
           />
           <img
-            src="./img/hero/Girl-tb.jpg"
+            src="./img/hero/Girl.jpg"
             alt="Girl"
-            width="413"
-            height="575"
-            class="hero-img"
+            width="392"
+            height="545"
+            
           />
         </picture>
         <img
-              srcset="./img/hero/Group.jpg 1x, ./img/hero/Group-2x.jpg 2x"
-                src="./img/hero/Group.jpg"
+              srcset="./img/hero/Group.png 1x, ./img/hero/Group-2x.png 2x"
+                src="./img/hero/Group.png"
                 alt="Group"
                 width="157"
                 height="191"
+                class="hero-img"
               />
     </div>
 </section>        
