--- a/src/partials/our-collection.html
+++ b/src/partials/our-collection.html
@@ -1,6 +1,6 @@
 <!-- section Our collection -->
 <section class="collection">
-  <div class="container">
+  <div class="container-collection">
     <h2 class="title-section-collection">Our collection</h2>
     <ul class="collection-list">
       <li class="collection-card">
@@ -67,7 +67,7 @@
           />
           <source
             srcset="
-              ./img/image64-2tablet.jpg    1x,
+              ./img/image64-2tablet.jpg 1x,
               ./img/image64-2tablet@2x.jpg 2x
             "
             media="(min-width: 768px)"
@@ -126,7 +126,7 @@
           />
           <source
             srcset="
-              ./img/image65-2tablet.jpg    1x,
+              ./img/image65-2tablet.jpg 1x,
               ./img/image65-2tablet@2x.jpg 2x
             "
             media="(min-width: 768px)"
@@ -157,7 +157,7 @@
           />
           <source
             srcset="
-              ./img/image63-2tablet.jpg    1x,
+              ./img/image63-2tablet.jpg 1x,
               ./img/image63-2tablet@2x.jpg 2x
             "
             media="(min-width: 768px)"
