--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,11 @@
 <!-- ---------------H-e-a-d-e-r----------------- -->
 
-<section>
-  <div></div>
-</section>
+<header class="header">
+  <div class="container">
+    <nav class="header-navigation">
+      <a class="header-logo" href="./index.html">
+        <svg></svg>
+      </a>
+    </nav>
+  </div>
+</header>
