--- a/src/partials/our-collection.html
+++ b/src/partials/our-collection.html
@@ -6,19 +6,23 @@
       <li class="collection-card">
         <picture>
           <source
-            srcset="./img/image63desk.jpg 1x, ./img/image63desk@2x.jpg 2x"
+            srcset="./img/collection-1-desctop.jpg 1x, ./img/collection-1-desctop@2x.jpg 2x"
+            media="(min-width: 1440px)"
+          />
+          <source
+            srcset="./img/collection-1-desctop-small.jpg 1x, ./img/collection-1-desctop-small@2x.jpg 2x"
             media="(min-width: 1280px)"
           />
           <source
-            srcset="./img/image63tablet.jpg 1x, ./img/image63tablet@2x.jpg 2x"
+            srcset="./img/collection-1-tab.jpg 1x, ./img/collection-1-tab@2x.jpg 2x"
             media="(min-width: 768px)"
           />
           <source
-            srcset="./img/image63mob.jpg 1x, ./img/image63mob@2x.jpg 2x"
+            srcset="./img/collection-1-mob.jpg 1x, ./img/collection-1-mob@2x.jpg 2x"
             media="(max-width: 767px)"
           />
           <img
-            src="./img/image63desk.jpg"
+            src="./img/collection-1-desctop.jpg"
             loading="lazy"
             alt="Poltava"
             width="335"
