--- a/src/partials/our-collection.html
+++ b/src/partials/our-collection.html
@@ -6,19 +6,31 @@
       <li class="collection-card">
         <picture>
           <source
-            srcset="./img/collection-1-desctop.jpg 1x, ./img/collection-1-desctop@2x.jpg 2x"
+            srcset="
+              ./img/collection-1-desctop.jpg    1x,
+              ./img/collection-1-desctop@2x.jpg 2x
+            "
             media="(min-width: 1440px)"
           />
           <source
-            srcset="./img/collection-1-desctop-small.jpg 1x, ./img/collection-1-desctop-small@2x.jpg 2x"
+            srcset="
+              ./img/collection-1-desctop-small.jpg    1x,
+              ./img/collection-1-desctop-small@2x.jpg 2x
+            "
             media="(min-width: 1280px)"
           />
           <source
-            srcset="./img/collection-1-tab.jpg 1x, ./img/collection-1-tab@2x.jpg 2x"
+            srcset="
+              ./img/collection-1-tab.jpg    1x,
+              ./img/collection-1-tab@2x.jpg 2x
+            "
             media="(min-width: 768px)"
           />
           <source
-            srcset="./img/collection-1-mob.jpg 1x, ./img/collection-1-mob@2x.jpg 2x"
+            srcset="
+              ./img/collection-1-mob.jpg    1x,
+              ./img/collection-1-mob@2x.jpg 2x
+            "
             media="(max-width: 767px)"
           />
           <img
@@ -38,19 +50,35 @@
       <li class="collection-card">
         <picture>
           <source
-            srcset="./img/image64desk.jpg 1x, ./img/image64desk@2x.jpg 2x"
+            srcset="
+              ./img/collection-2-desctop.jpg    1x,
+              ./img/collection-2-desctop@2x.jpg 2x
+            "
+            media="(min-width: 1440px)"
+          />
+          <source
+            srcset="
+              ./img/collection-2-desctop-small.jpg    1x,
+              ./img/collection-2-desctop-small@2x.jpg 2x
+            "
             media="(min-width: 1280px)"
           />
           <source
-            srcset="./img/image64tablet.jpg 1x, ./img/image64tablet@2x.jpg 2x"
+            srcset="
+              ./img/collection-2-tab.jpg    1x,
+              ./img/collection-2-tab@2x.jpg 2x
+            "
             media="(min-width: 768px)"
           />
           <source
-            srcset="./img/image64mob.jpg 1x, ./img/image64mob@2x.jpg 2x"
+            srcset="
+              ./img/collection-2-mob.jpg    1x,
+              ./img/collection-2-mob@2x.jpg 2x
+            "
             media="(max-width: 767px)"
           />
           <img
-            src="./img/image64desk.jpg"
+            src="./img/collection-2-desctop.jpg"
             loading="lazy"
             alt="Women's blouse Gorgany"
             width="335"
@@ -66,22 +94,35 @@
       <li class="collection-card">
         <picture>
           <source
-            srcset="./img/image64-2desk.jpg 1x, ./img/image64-2desk@2x.jpg 2x"
+            srcset="
+              ./img/collection-3-desctop.jpg    1x,
+              ./img/collection-3-desctop@2x.jpg 2x
+            "
+            media="(min-width: 1440px)"
+          />
+          <source
+            srcset="
+              ./img/collection-3-desctop-small.jpg    1x,
+              ./img/collection-3-desctop-small@2x.jpg 2x
+            "
             media="(min-width: 1280px)"
           />
           <source
             srcset="
-              ./img/image64-2tablet.jpg 1x,
-              ./img/image64-2tablet@2x.jpg 2x
+              ./img/collection-3-tab.jpg    1x,
+              ./img/collection-3-tab@2x.jpg 2x
             "
             media="(min-width: 768px)"
           />
           <source
-            srcset="./img/image64-2mob.jpg 1x, ./img/image64-2mob@2x.jpg 2x"
+            srcset="
+              ./img/collection-3-mob.jpg    1x,
+              ./img/collection-3-mob@2x.jpg 2x
+            "
             media="(max-width: 767px)"
           />
           <img
-            src="./img/image64-2desk.jpg"
+            src="./img/collection-3-desctop.jpg"
             loading="lazy"
             alt="Women's blouse Crimea"
             width="335"
@@ -97,19 +138,35 @@
       <li class="collection-card">
         <picture>
           <source
-            srcset="./img/image65desk.jpg 1x, ./img/image65desk@2x.jpg 2x"
+            srcset="
+              ./img/collection-4-desctop.jpg    1x,
+              ./img/collection-4-desctop@2x.jpg 2x
+            "
+            media="(min-width: 1440px)"
+          />
+          <source
+            srcset="
+              ./img/collection-4-desctop-small.jpg    1x,
+              ./img/collection-1-desctop-small@2x.jpg 2x
+            "
             media="(min-width: 1280px)"
           />
           <source
-            srcset="./img/image65tablet.jpg 1x, ./img/image65tablet@2x.jpg 2x"
+            srcset="
+              ./img/collection-4-tab.jpg    1x,
+              ./img/collection-4-tab@2x.jpg 2x
+            "
             media="(min-width: 768px)"
           />
           <source
-            srcset="./img/image65mob.jpg 1x, ./img/image65mob@2x.jpg 2x"
+            srcset="
+              ./img/collection-4-mob.jpg    1x,
+              ./img/collection-4-mob@2x.jpg 2x
+            "
             media="(max-width: 767px)"
           />
           <img
-            src="./img/image65desk.jpg"
+            src="./img/collection-4-desctop.jpg"
             loading="lazy"
             alt="Men's shirt Verkhovina"
             width="335"
@@ -125,22 +182,35 @@
       <li class="collection-card">
         <picture>
           <source
-            srcset="./img/image65-2desk.jpg 1x, ./img/image65-2desk@2x.jpg 2x"
+            srcset="
+              ./img/collection-5-desctop.jpg    1x,
+              ./img/collection-5-desctop@2x.jpg 2x
+            "
+            media="(min-width: 1440px)"
+          />
+          <source
+            srcset="
+              ./img/collection-5-desctop-small.jpg    1x,
+              ./img/collection-5-desctop-small@2x.jpg 2x
+            "
             media="(min-width: 1280px)"
           />
           <source
             srcset="
-              ./img/image65-2tablet.jpg 1x,
-              ./img/image65-2tablet@2x.jpg 2x
+              ./img/collection-5-tab.jpg    1x,
+              ./img/collection-5-tab@2x.jpg 2x
             "
             media="(min-width: 768px)"
           />
           <source
-            srcset="./img/image65-2mob.jpg 1x, ./img/image65-2mob@2x.jpg 2x"
+            srcset="
+              ./img/collection-5-mob.jpg    1x,
+              ./img/collection-5-mob@2x.jpg 2x
+            "
             media="(max-width: 767px)"
           />
           <img
-            src="./img/image65-2desk.jpg"
+            src="./img/collection-5-desctop.jpg"
             loading="lazy"
             alt="Mountain men's shirt"
             width="335"
@@ -156,22 +226,35 @@
       <li class="collection-card">
         <picture>
           <source
-            srcset="./img/image63-2desk.jpg 1x, ./img/image63-2desk@2x.jpg 2x"
+            srcset="
+              ./img/collection-6-desctop.jpg    1x,
+              ./img/collection-6-desctop@2x.jpg 2x
+            "
+            media="(min-width: 1440px)"
+          />
+          <source
+            srcset="
+              ./img/collection-6-desctop-small.jpg    1x,
+              ./img/collection-6-desctop-small@2x.jpg 2x
+            "
             media="(min-width: 1280px)"
           />
           <source
             srcset="
-              ./img/image63-2tablet.jpg 1x,
-              ./img/image63-2tablet@2x.jpg 2x
+              ./img/collection-6-tab.jpg    1x,
+              ./img/collection-6-tab@2x.jpg 2x
             "
             media="(min-width: 768px)"
           />
           <source
-            srcset="./img/image63-2mob.jpg 1x, ./img/image63-2mob@2x.jpg 2x"
+            srcset="
+              ./img/collection-6-mob.jpg    1x,
+              ./img/collection-6-mob@2x.jpg 2x
+            "
             media="(max-width: 767px)"
           />
           <img
-            src="./img/image63-2desk.jpg"
+            src="./img/collection-6-desctop.jpg"
             loading="lazy"
             alt="Men's shirt Yasen"
             width="335"
