--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -1,16 +1,37 @@
 <section class="your-order">
-    <img src="" alt="vyshyvanka" class="order-img" loading="lazy" width="524" height="521">
-    <h2 class="order-title"><span>Your order</span> is our priority: Personalized approach and quality of service</h2>
-    <form class="form-order">
-        <div class="modal-field-order">
-                <input type="text" name="user-name" class="form-input" id="user-name" placeholder="Enter your full name" />
-                <input type="email" name="user-email" class="form-input" id="user-email" placeholder="Enter your email" />
-                <textarea name="user-text" id="user-text" class="form-textarea" placeholder="Comments"></textarea>
-            </div>
-            <button type="submit" class="form-btn">Send
-                <svg class="btn-icon" width="26" height="10">
-                    <use href=""></use>
-                </svg>
-            </button>
-    </form>
+<div class="background-image-girl"></div>
+<div class="image-your-order">
+    <picture>
+        <source srcset="./img/your-order-desctop.jpeg, ./img/your-order-desctop@2.jpeg" min-width="524px" />
+    </picture>
+    <picture>
+        <source srcset="./img/your-order-desctop-small.jpeg, ./img/your-order-desctop-small@2x.jpeg"
+            min-width="524px" />
+    </picture>
+    <picture>
+        <source srcset="./img/your-order-tab.jpeg, ./img/your-order-tab@2x.jpeg" min-width="638px" />
+    </picture>
+    <img class="order-img" src="./img/your-order-desctop.jpeg" alt="vyshyvanka" width="524" height="521" />
+</div>
+<div class="background-image-ornament"></div>
+<h2 class="order-title">
+    <span>Your order</span> is our priority: Personalized approach and quality
+    of service
+</h2>
+<form class="form-order">
+    <div class="form-field-order">
+        <input type="text" name="user-name" class="form-input" id="user-name" placeholder="Enter your full name"
+            pattern="[A-Za-z]{2,}" title="Enter at least 2 letters of the Latin alphabet" required />
+        <input type="email" name="user-email" class="form-input" id="user-email" placeholder="Enter your email"
+            required />
+        <textarea name="user-text" id="user-text" class="form-textarea" placeholder="Comments"></textarea>
+    </div>
+    <button type="submit" class="form-btn">
+        Send
+        <svg class="btn-icon" width="26" height="10">
+            <use href="../img/symbol-defs.svg#icon-arrow"></use>
+        </svg>
+    </button>
+</form>
 </section>
+  
