--- a/src/partials/our-collection.html
+++ b/src/partials/our-collection.html
@@ -147,7 +147,7 @@
           <source
             srcset="
               ./img/collection-4-desctop-small.jpg    1x,
-              ./img/collection-1-desctop-small@2x.jpg 2x
+              ./img/collection-4-desctop-small@2x.jpg 2x
             "
             media="(min-width: 1280px)"
           />
@@ -183,34 +183,34 @@
         <picture>
           <source
             srcset="
-              ./img/collection-5-desctop.jpg    1x,
-              ./img/collection-5-desctop@2x.jpg 2x
+              ./img/collection-5-desctop.jpeg    1x,
+              ./img/collection-5-desctop@2x.jpeg 2x
             "
             media="(min-width: 1440px)"
           />
           <source
             srcset="
-              ./img/collection-5-desctop-small.jpg    1x,
-              ./img/collection-5-desctop-small@2x.jpg 2x
+              ./img/collection-5-desctop-small.jpeg    1x,
+              ./img/collection-5-desctop-small@2x.jpeg 2x
             "
             media="(min-width: 1280px)"
           />
           <source
             srcset="
-              ./img/collection-5-tab.jpg    1x,
-              ./img/collection-5-tab@2x.jpg 2x
+              ./img/collection-5-tab.jpeg    1x,
+              ./img/collection-5-tab@2x.jpeg 2x
             "
             media="(min-width: 768px)"
           />
           <source
             srcset="
-              ./img/collection-5-mob.jpg    1x,
-              ./img/collection-5-mob@2x.jpg 2x
+              ./img/collection-5-mob.jpeg    1x,
+              ./img/collection-5-mob@2x.jpeg 2x
             "
             media="(max-width: 767px)"
           />
           <img
-            src="./img/collection-5-desctop.jpg"
+            src="./img/collection-5-desctop.jpeg"
             loading="lazy"
             alt="Mountain men's shirt"
             width="335"
@@ -227,34 +227,34 @@
         <picture>
           <source
             srcset="
-              ./img/collection-6-desctop.jpg    1x,
-              ./img/collection-6-desctop@2x.jpg 2x
+              ./img/collection-6-desctop.jpeg    1x,
+              ./img/collection-6-desctop@2x.jpeg 2x
             "
             media="(min-width: 1440px)"
           />
           <source
             srcset="
-              ./img/collection-6-desctop-small.jpg    1x,
-              ./img/collection-6-desctop-small@2x.jpg 2x
+              ./img/collection-6-desctop-small.jpeg    1x,
+              ./img/collection-6-desctop-small@2x.jpeg 2x
             "
             media="(min-width: 1280px)"
           />
           <source
             srcset="
-              ./img/collection-6-tab.jpg    1x,
-              ./img/collection-6-tab@2x.jpg 2x
+              ./img/collection-6-tab.jpeg    1x,
+              ./img/collection-6-tab@2x.jpeg 2x
             "
             media="(min-width: 768px)"
           />
           <source
             srcset="
-              ./img/collection-6-mob.jpg    1x,
-              ./img/collection-6-mob@2x.jpg 2x
+              ./img/collection-6-mob.jpeg    1x,
+              ./img/collection-6-mob@2x.jpeg 2x
             "
             media="(max-width: 767px)"
           />
           <img
-            src="./img/collection-6-desctop.jpg"
+            src="./img/collection-6-desctop.jpeg"
             loading="lazy"
             alt="Men's shirt Yasen"
             width="335"
