--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,11 +1,90 @@
 <!-- ---------------H-e-a-d-e-r----------------- -->
 
 <header class="header">
-  <div class="container">
+  <div class="header-container">
+    <img
+      class="logo-img"
+      src="../img/logo.svg"
+      alt="logo-icon"
+      width="44"
+      height="40"
+    />
     <nav class="header-navigation">
-      <a class="header-logo" href="./index.html">
-        <svg></svg>
-      </a>
+      <ul class="header-menu">
+        <li class="header-menu-item"><a href="#">About us</a></li>
+        <li class="header-menu-item"><a href="#">Our collection </a></li>
+        <li class="header-menu-item"><a href="#">CUSTOMER ORDER</a></li>
+        <li class="header-menu-item"><a href="#">TEstimonials</a></li>
+      </ul>
     </nav>
+    <address class="address">
+      <ul class="address-menu">
+        <li class="address-item">
+          <a class="address-link" href="tel:+380684439426"
+            >+380 (68) 443-94-26</a
+          >
+        </li>
+      </ul>
+    </address>
+
+    <ul class="soc-menu">
+      <li class="soc-item">
+        <a
+          class="soc-link"
+          href="https://www.facebook.com/goITclub/ "
+          target="_blank"
+          ><svg class="soc-icon" width="28" height="28">
+            <use href="./images/icons.svg#icon-facebook"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="soc-item">
+        <a
+          class="soc-link"
+          href="https://www.instagram.com/goitclub/ "
+          target="_blank"
+          ><svg class="soc-icon" width="28" height="28">
+            <use href="./images/icons.svg#icon-instagram"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="soc-item">
+        <a
+          class="soc-link"
+          href="https://www.youtube.com/c/GoIT "
+          target="_blank"
+          ><svg class="soc-icon" width="28" height="28">
+            <use href="./images/icons.svg#icon-youtube"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+
+    <button type="button" class="menu-header-btn">
+      <svg class="menu-icon" width="44" height="30">
+        <use href="./images/icons.svg#"></use>
+      </svg>
+    </button>
+  </div>
+
+  <!-- -------------Mob-menu------------ -->
+
+  <div class="mob-menu">
+    <div>
+      <address class="address">
+        <ul class="address-menu">
+          <li class="address-item">
+            <a class="address-link" href="tel:+380684439426"
+              >+380 (68) 443-94-26</a
+            >
+          </li>
+        </ul>
+      </address>
+      <button type="button" class="mob-close-btn">
+        <svg class="mob-btn-icon" width="36" height="36">
+          <use href="./images/icons.svg#icon-close-black-18dp-2-1-1"></use>
+        </svg>
+      </button>
+    </div>
   </div>
 </header>
