--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -71,10 +71,10 @@
 
   <div class="mob-menu">
     <div>
-      <address class="address">
-        <ul class="address-menu">
-          <li class="address-item">
-            <a class="address-link" href="tel:+380684439426"
+      <address class="mob-address">
+        <ul class="mob-address-menu">
+          <li class="mob-address-item">
+            <a class="mob-address-link" href="tel:+380684439426"
               >+380 (68) 443-94-26</a
             >
           </li>
@@ -85,6 +85,25 @@
           <use href="./images/icons.svg#icon-close-black-18dp-2-1-1"></use>
         </svg>
       </button>
+    </div>
+    <div>
+      <nav class="mob-header-navigation">
+        <ul class="mob-header-menu">
+          <li class="mob-header-menu-item"><a href="#">About us</a></li>
+          <li class="mob-header-menu-item"><a href="#">Our collection </a></li>
+          <li class="mob-header-menu-item"><a href="#">CUSTOMER ORDER</a></li>
+          <li class="mob-header-menu-item"><a href="#">TEstimonials</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div>
+      <img
+        srcset="./images/ 1x, ./images/ 2x"
+        src="./images/"
+        alt="ornament"
+        width="340"
+        class="mob-menu-img"
+      />
     </div>
   </div>
 </header>
