--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -15,7 +15,7 @@
     </div>
     <div class="background-image-ornament"></div>
     <h2 class="order-title">
-        <span>Your order</span> is our priority: Personalized approach and quality
+        <span class="yellow-part">Your order</span> is our priority: Personalized approach and quality
         of service
     </h2>
     <form class="form-order">
