--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -29,35 +29,32 @@
 
     <ul class="soc-menu">
       <li class="soc-item">
-        прпрпрр
         <a
           class="soc-link"
           href="https://www.facebook.com/goITclub/ "
           target="_blank"
           ><svg class="soc-icon" width="28" height="28">
-            <use href="./images/icons.svg#icon-facebook"></use>
+            <use href="../img/symbol-defs.svg#icon-facebook"></use>
           </svg>
         </a>
       </li>
       <li class="soc-item">
-        прпрпр
         <a
           class="soc-link"
           href="https://www.instagram.com/goitclub/ "
           target="_blank"
           ><svg class="soc-icon" width="28" height="28">
-            <use href="./images/icons.svg#icon-instagram"></use>
+            <use href="../img/symbol-defs.svg#icon-instagram"></use>
           </svg>
         </a>
       </li>
       <li class="soc-item">
-        прпрпрпр
         <a
           class="soc-link"
           href="https://www.youtube.com/c/GoIT "
           target="_blank"
           ><svg class="soc-icon" width="28" height="28">
-            <use href="./images/icons.svg#icon-youtube"></use>
+            <use href="../img/symbol-defs.svg#icon-youtube"></use>
           </svg>
         </a>
       </li>
@@ -65,7 +62,7 @@
 
     <button type="button" class="menu-header-btn">
       <svg class="menu-icon" width="44" height="30">
-        <use href="./images/icons.svg#"></use>
+        <use href="../img/burger.svg"></use>
       </svg>
     </button>
   </div>
