--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -5,11 +5,8 @@
       <li class="testimonials__item">
         <div class="testimonials__img-wrap">
           <img
-            src="../img/testimonials/user1.png"
-            srcset="
-              ./img/testimonials/user1.png    1x,
-              ./img/testimonials/user1@2x.png 2x
-            "
+            src="./img/Maria-Tcacuk.png"
+            srcset="./img/Maria-Tcacuk.png 1x, ./img/Maria-Tcacuk@2x.png 2x"
             alt="Customer testimonial: 'Pleasantly surprised by Vyshyvanka Vibes' variety of embroidery."
             width="64"
             height="64"
@@ -30,11 +27,8 @@
       <li class="testimonials__item">
         <div class="testimonials__img-wrap">
           <img
-            src="./img/testimonials/user2.png"
-            srcset="
-              ./img/testimonials/user2.png    1x,
-              ./img/testimonials/user2@2x.png 2x
-            "
+            src="../img/Sergiy.png"
+            srcset="./img/Sergiy.png 1x, ./img/Sergiy@2x.png 2x"
             alt="Customer testimonial: 'Pleasantly surprised by Vyshyvanka Vibes' variety of embroidery."
             width="64"
             height="64"
@@ -52,11 +46,8 @@
       <li class="testimonials__item">
         <div class="testimonials__img-wrap">
           <img
-            src="./img/testimonials/user3.png"
-            srcset="
-              ./img/testimonials/user3.png    1x,
-              ./img/testimonials/user3@2x.png 2x
-            "
+            src="./img/Natalia.png"
+            srcset="./img/Natalia.png 1x, ./img/Natalia@2x.png 2x"
             alt="Customer testimonial: 'Pleasantly surprised by Vyshyvanka Vibes' variety of embroidery."
             width="64"
             height="64"
