--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,54 +1,106 @@
 /* Reset styles */
 body {
-    color: #FCF9F9;
-    background-color: #1C2225;
-    font-family: Manrope, sans-serif;
-    font-weight: 400;
-  }
-  
-  ul {
-    list-style-type: none;
-    padding-left: 0;
-    margin: 0;
-  }
-  
-  img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-  }
-  
-  input {
-    width: 100%;
-    height: 40px;
-    flex-shrink: 0;
-    border-radius: 4px;
-    outline: none;
-  }
-  
-  @media screen and (min-width: 768px) {
-    input {
-      min-width: 264px;
-    }
-  }
-  
-  textarea {
-    outline: none;
-  }
-  
-  h1,
-  h2,
-  h3,
-  p {
-    margin: 0;
-  }
-  
-  button {
-    cursor: pointer;
-    border: none;
-    background-color: transparent;
-    padding: 0;
-  }
+  color: #fcf9f9;
+  background-color: #1c2225;
+  font-family: Manrope, sans-serif;
+  font-weight: 400;
+}
 
-  
-  
+ul {
+  list-style-type: none;
+  padding-left: 0;
+  margin: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+input {
+  width: 100%;
+  height: 40px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  outline: none;
+}
+
+@media screen and (min-width: 768px) {
+  input {
+    min-width: 264px;
+  }
+}
+
+textarea {
+  outline: none;
+}
+
+h1,
+h2,
+h3,
+p {
+  margin: 0;
+}
+
+button {
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+}
+
+.link {
+  text-decoration: none;
+}
+
+.container {
+  max-width: 335px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.title {
+  color: #FCF9F9;
+font-family: Manrope;
+font-size: 44px;
+font-style: normal;
+font-weight: 500;
+line-height: 1.45;
+letter-spacing: -1.32px;
+}
+
+.global-title {
+  color: #FCF9F9;
+font-family: Manrope;
+font-size: 64px;
+font-style: normal;
+line-height: 1.15; 
+letter-spacing: -1.92px;
+}
+
+.text {
+  color: rgba(252, 249, 249, 0.4);
+  font-size: 16px;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: -0.64px;
+}
+
+@media screen and (max-width: 1440px) {
+  .container {
+    max-width: 1240px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .container {
+    max-width: 1082px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 704px;
+  }
+}
