--- a/src/partials/our-collection.html
+++ b/src/partials/our-collection.html
@@ -1,8 +1,9 @@
 <!-- section Our collection -->
 <section class="collection">
-  <div class="container-collection">
+  <div class="container-collection ornament">
     <h2 class="title-section-collection">Our collection</h2>
     <ul class="collection-list">
+      
       <li class="collection-card">
         <picture>
           <source
@@ -47,6 +48,7 @@
           <p class="price">3300 UAH</p>
         </div>
       </li>
+    
       <li class="collection-card">
         <picture>
           <source
