--- a/src/css/testimonials.css
+++ b/src/css/testimonials.css
@@ -37,7 +37,7 @@
 .testimonials__item:hover,
 .testimonials__item:focus {
   transform: scale(1.15);
-  background-color: var(--white, #fcf9f9);
+  background-color: rgba(252, 249, 249, 0.8);
 }
 
 .testimonials__item:hover .testimonials__subtitle,
@@ -53,6 +53,7 @@
   justify-content: center;
   transform: translateY(-40%);
   margin-bottom: -20px;
+  transition: transform 0.5s;
 }
 
 .testimonials__subtitle {
