--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,37 +1,38 @@
 <section class="hero">
     <div class="container hero-container">
       <div class="hero-text-box"><svg class="hero-icon" width="52" height="51">
-        <use href="../img/icons.svg#icon-Star-10"></use>
+        <use href="../img/symbol-defs.svg#icon-sun"></use>
         </svg>
         <p class="hero-text">all embroidery is made by hand</p>
       </div>
       <h1 class="hero-title">Reviving the traditional<span> Ukrainian</span>  artistry in every stitch.</h1>
       <button type="button" class="hero-btn">Order <svg class="hero-btn-icon" width="26" height="10">
-        <use href="../img/icons.svg#icon-untitled"></use>
+        <use href="../img/symbol-defs.svg#icon-untitled"></use>
         </svg></button>
         <picture class="hero-picture">
           <source
-            srcset="./img/hero/girl.jpg 1x, ./img/hero/girl-2x.jpg 2x"
+            srcset="./img/hero/girl-desctop.jpeg 1x, ./img/hero/girl-desctop@2x.jpeg 2x"
             media="(min-width: 1280px)"
           />
           <source
-            srcset="./img/hero/Girl-tb.jpg 1x, ./img/hero/Girl-tb-2x.jpg 2x"
+            srcset="./img/hero/Girl-tab.jpeg 1x, ./img/hero/Girl-tab@2x.jpeg 2x"
             media="(min-width: 768px)"
           />
           <source
-            srcset="./img/hero/girl.jpg 1x, ./img/hero/girl-2x.jpg 2x"
+            srcset="./img/hero/girl-mob.jpeg 1x, ./img/hero/girl-mob@2x.jpeg 2x"
             media="(max-width: 767px)"
           />
           <img
-            src="./img/hero/Girl.jpg"
+            src="./img/hero/girl-desctop.jpeg"
             alt="Girl"
             width="392"
             height="545"
+            class="hero-title-img"
             
           />
         </picture>
         <img
-              srcset="./img/hero/Group.png 1x, ./img/hero/Group-2x.png 2x"
+              srcset="./img/hero/Group-desctop.png 1x, ./img/hero/Group-desctop@2x.png 2x"
                 src="./img/hero/Group.png"
                 alt="Group"
                 width="157"
