--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,6 +1,14 @@
 /* HERO */
+.container{
+    width: 100%;
+    max-width: 375px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin: 0 auto;
+}
 .hero-container{
     padding: 60px 20px 80px 20px;
+    
 }
 .hero-text-box{
 display: none;
@@ -45,6 +53,11 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .hero-btn svg:hover{
 transform: rotate(-30deg);    
 }
+.hero-title-img{
+    width: 335px;
+height: 545px;
+flex-shrink: 0;
+}
 .hero-img{
 display: none;
 }
@@ -53,6 +66,9 @@ display: none;
 @media screen and (min-width: 768px){
     .hero{
         position: relative;
+    }
+    .container{
+        max-width: 768px;
     }
     .hero-container{
         padding: 53px 32px 50px 32px;
