--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <!-- ---------------H-e-a-d-e-r----------------- -->
 
 <header class="header">
-  <div class="header-container">
+  <div class="header-container container">
     <img
       class="logo-img"
       src="../img/logo.svg"
