--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,10 +11,18 @@
     />
     <nav class="header-navigation">
       <ul class="header-menu">
-        <li class="header-menu-item"><a href="#">About us</a></li>
-        <li class="header-menu-item"><a href="#">Our collection </a></li>
-        <li class="header-menu-item"><a href="#">CUSTOMER ORDER</a></li>
-        <li class="header-menu-item"><a href="#">TEstimonials</a></li>
+        <li class="header-menu-item">
+          <a class="header-menu-link" href="#">About us</a>
+        </li>
+        <li class="header-menu-item">
+          <a class="header-menu-link" href="#">Our collection </a>
+        </li>
+        <li class="header-menu-item">
+          <a class="header-menu-link" href="#">CUSTOMER ORDER</a>
+        </li>
+        <li class="header-menu-item">
+          <a class="header-menu-link" href="#">TEstimonials</a>
+        </li>
       </ul>
     </nav>
     <address class="address">
