--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -29,7 +29,7 @@
         <button type="submit" class="form-btn">
             Send
             <svg class="btn-icon" width="26" height="10">
-                <use href="../img/symbol-defs.svg#icon-arrow"></use>
+                <use href="./img/symbol-defs.svg#icon-arrow"></use>
             </svg>
         </button>
     </form>
