--- a/src/css/your-order.css
+++ b/src/css/your-order.css
@@ -1,1 +1,118 @@
 /* YOUR-ORDER */
+.your-order {
+    padding-left: 20px;
+    padding-right: 20px;
+    max-width: 320px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.background-image {
+    background-image: url(../img/bg-girl-mob.jpg);
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+    background-size: cover;
+    width: 375px;
+    height: 550px;
+}
+
+@media (min-device-pixel-ratio: 2),
+(min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+    .background-image {
+        background-image: url(../img/bg-girl-mob@2x.jpg);
+    }
+}
+
+.order-img {}
+
+.order-title {
+    color: #fcf9f9;
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 1.37;
+    letter-spacing: -0.03em;
+    margin-bottom: 40px;
+    padding-top: 80px;
+    max-width: 335px;
+    text-align: left;
+}
+
+.order-title span {
+    color: #ecd979;
+}
+
+.form-order {}
+
+
+.form-label {}
+
+.form-input {
+    border-radius: 15px;
+    border: 1px solid rgba(252, 249, 249, 0.1);
+    background-color: transparent;
+    width: 100%;
+    height: 47px;
+    margin-bottom: 20px;
+    padding-right: 16px;
+    padding-left: 16px;
+    color: hsl(0, 33%, 98%);
+    font-size: 14px;
+    transition: border-color 250ms linear;
+}
+
+.form-input:focus {
+    border: 1px solid rgba(252, 249, 249, 0.6);
+}
+
+.form-input::placeholder {
+    color: rgba(252, 249, 249, 0.5);
+    font-size: 14px;
+    line-height: normal;
+    letter-spacing: -0.02em;
+}
+
+.form-textarea {
+    width: 100%;
+    height: 196px;
+    margin-bottom: 40px;
+    padding: 14px 16px;
+    color: hsl(0, 33%, 98%);
+    font-size: 14px;
+    transition: border-color 250ms linear;
+    border-radius: 8px;
+    border: 1px solid rgba(252, 249, 249, 0.1);
+    background-color: transparent;
+    resize: none;
+}
+
+.form-textarea::placeholder {
+    color: rgba(252, 249, 249, 0.5);
+    font-size: 14px;
+    line-height: normal;
+    letter-spacing: -0.02em;
+}
+
+.form-btn {
+    padding: 14px 36px;
+    color: #fcf9f9;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: -0.04em;
+    text-transform: uppercase;
+    border-radius: 15px;
+    border: 1px solid rgba(252, 249, 249, 0.1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 14px 36px;
+    gap: 10px;
+    min-width: 145px;
+    height: 49px;
+    margin: 0 auto;
+}
+
+.btn-icon {
+    fill: #ecd979;
+}
