--- a/src/css/your-order.css
+++ b/src/css/your-order.css
@@ -2,18 +2,16 @@
 .your-order {
     padding-left: 20px;
     padding-right: 20px;
-    max-width: 320px;
-    margin-left: auto;
-    margin-right: auto;
+    max-width: 335px;
 }
 
-.background-image {
+.background-image-girl {
     background-image: url(../img/bg-girl-mob.jpg);
     background-repeat: no-repeat;
     background-position: 50% 0;
-    background-size: cover;
-    width: 375px;
-    height: 550px;
+    background-size: contain;
+    min-width: 375px;
+    min-height: 550px;
 }
 
 @media (min-device-pixel-ratio: 2),
@@ -24,17 +22,14 @@
     }
 }
 
-.order-img {}
+.image-your-order {
+    display: none;
+}
 
 .order-title {
-    color: #fcf9f9;
-    font-size: 32px;
-    font-weight: 500;
-    line-height: 1.37;
     letter-spacing: -0.03em;
     margin-bottom: 40px;
     padding-top: 80px;
-    max-width: 335px;
     text-align: left;
 }
 
