--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -115,7 +115,7 @@ button {
   }
 }
 
-@media screen and (max-width: 1440px) {
+@media screen and (min-width: 1440px) {
   .container {
     max-width: 1280px;
   }
